feat: Matching extension to specific value decoder

--- a/misc/composing_stores.ipynb
+++ b/misc/composing_stores.ipynb
@@ -408,6 +408,9 @@
     "from msword import bytes_to_doc, get_text_from_docx\n",
     "\n",
     "\n",
+    "# Why not just use lambda x: x.endswith(ext) in a loop?\n",
+    "# Because of leaky lambdas in loops:\n",
+    "#    https://github.com/thorwhalen/umpyre/discussions/61#discussioncomment-9020098\n",
     "def endswith_extension(extension, string=None):\n",
     "    if string is None:\n",
     "        return partial(endswith_extension, extension)\n",
