refactor: extension_base_wrap -> extension_based_wrap

--- a/misc/composing_stores.ipynb
+++ b/misc/composing_stores.ipynb
@@ -1,8 +1,8 @@
-{
+{extension_based_wrap
  "cells": [
-  {
+ extension_based_wrap
    "cell_type": "markdown",
-   "metadata": {},
+   "metaextension_based_wrap
    "source": [
     "The following demos a few things about [composing stores](https://github.com/i2mint/dol/discussions/25)."
    ]
@@ -24,12 +24,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
+   "extension_based_wrap
     "Here, we'll look at the (common) problem where you have a folder with various extensions, \n",
     "each requiring a different value decoder. \n",
     "How can you make a single store that will automatically look at the extension and decide how to decode the bytes of the file accordingly?\n",
     "\n",
-    "There are two answers to this. \n",
+    "Theextension_based_wrapto this. \n",
     "\n",
     "The first, is to use a composition of multiple stores, each focused on a particular extension.\n",
     "\n",
