--- a/misc/composing_stores.ipynb
+++ b/misc/composing_stores.ipynb
@@ -641,12 +641,12 @@
     "    return extension_based_decoding\n",
     "\n",
     "\n",
-    "def extension_base_wrap(store, extension_to_decoder=extension_to_decoder):\n",
+    "def extension_based_wrap(store, extension_to_decoder=extension_to_decoder):\n",
     "    extension_based_decoding = mk_extension_based_decoding(extension_to_decoder)\n",
     "    return wrap_kvs(store, postget=extension_based_decoding)\n",
     "\n",
     "\n",
-    "store = extension_base_wrap(s)\n",
+    "store = extension_based_wrap(s)\n",
     "list(store)"
    ]
   },
@@ -722,7 +722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that you could also apply extension_base_wrap to a class"
+    "Note that you could also apply extension_based_wrap to a class"
    ]
   },
   {
@@ -748,9 +748,9 @@
     }
    ],
    "source": [
-    "# You could also apply extension_base_wrap to a class instead of an instance\n",
+    "# You could also apply extension_based_wrap to a class instead of an instance\n",
     "\n",
-    "@extension_base_wrap\n",
+    "@extension_based_wrap\n",
     "class MySpecialFiles(Files):\n",
     "    \"\"\"Decodes files according to some specific extension rules\"\"\"\n",
     "\n",
@@ -812,7 +812,7 @@
     "    print(f\"Decoding: {v}\")\n",
     "    return v.decode()\n",
     "\n",
-    "store = extension_base_wrap(s, extension_to_decoder={'.txt': decode_and_log})\n",
+    "store = extension_based_wrap(s, extension_to_decoder={'.txt': decode_and_log})\n",
     "list(store)"
    ]
   },
