refactor: bytes_to_pdf_text_pages -> bytes_to_pdf_text_pages_wrap

--- a/misc/composing_stores.ipynb
+++ b/misc/composing_stores.ipynb
@@ -1,8 +1,8 @@
-{extension_based_wrap
+{
  "cells": [
- extension_based_wrap
+  {
    "cell_type": "markdown",
-   "metaextension_based_wrap
+   "metadata": {},
    "source": [
     "The following demos a few things about [composing stores](https://github.com/i2mint/dol/discussions/25)."
    ]
@@ -24,12 +24,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "extension_based_wrap
+   "source": [
     "Here, we'll look at the (common) problem where you have a folder with various extensions, \n",
     "each requiring a different value decoder. \n",
     "How can you make a single store that will automatically look at the extension and decide how to decode the bytes of the file accordingly?\n",
     "\n",
-    "Theextension_based_wrapto this. \n",
+    "There are two answers to this. \n",
     "\n",
     "The first, is to use a composition of multiple stores, each focused on a particular extension.\n",
     "\n",
@@ -641,12 +641,12 @@
     "    return extension_based_decoding\n",
     "\n",
     "\n",
-    "def extension_based_wrap(store, extension_to_decoder=extension_to_decoder):\n",
+    "def extension_base_wrap(store, extension_to_decoder=extension_to_decoder):\n",
     "    extension_based_decoding = mk_extension_based_decoding(extension_to_decoder)\n",
     "    return wrap_kvs(store, postget=extension_based_decoding)\n",
     "\n",
     "\n",
-    "store = extension_based_wrap(s)\n",
+    "store = extension_base_wrap(s)\n",
     "list(store)"
    ]
   },
@@ -722,7 +722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that you could also apply extension_based_wrap to a class"
+    "Note that you could also apply extension_base_wrap to a class"
    ]
   },
   {
@@ -748,9 +748,9 @@
     }
    ],
    "source": [
-    "# You could also apply extension_based_wrap to a class instead of an instance\n",
+    "# You could also apply extension_base_wrap to a class instead of an instance\n",
     "\n",
-    "@extension_based_wrap\n",
+    "@extension_base_wrap\n",
     "class MySpecialFiles(Files):\n",
     "    \"\"\"Decodes files according to some specific extension rules\"\"\"\n",
     "\n",
@@ -812,7 +812,7 @@
     "    print(f\"Decoding: {v}\")\n",
     "    return v.decode()\n",
     "\n",
-    "store = extension_based_wrap(s, extension_to_decoder={'.txt': decode_and_log})\n",
+    "store = extension_base_wrap(s, extension_to_decoder={'.txt': decode_and_log})\n",
     "list(store)"
    ]
   },
