refactor: update bytes_to_pdf_text_pages to bytes_to_pdf_text_pages_wrap in notebook

--- a/misc/composing_stores.ipynb
+++ b/misc/composing_stores.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -215,11 +215,11 @@
     }
    ],
    "source": [
-    "from pdfdol.base import bytes_to_pdf_text_pages\n",
+    "from pdfdol.base import bytes_to_pdf_text_pages_wrap\n",
     "\n",
     "pdf_wrap = Pipe(\n",
     "    filt_iter(filt=lambda x: x.endswith('.pdf')),\n",
-    "    bytes_to_pdf_text_pages,\n",
+    "    bytes_to_pdf_text_pages_wrap,\n",
     "    wrap_kvs(value_decoder='\\n\\n------------\\n\\n'.join),\n",
     ")\n",
     "\n",
